--- a/src/scss/_social.scss
+++ b/src/scss/_social.scss
@@ -1,104 +1,107 @@
 .icon-button {
-    background-color: $white;
-    border-radius: 50%;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 20px;
-    height: 30px;
-    position: relative;
-    text-align: center;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    width: 30px;
+  background-color: $white;
+  border-radius: 50%;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 20px;
+  height: 30px;
+  position: relative;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 30px;
 }
-
 
 /* Rodapé */
 
 .rodape .icon-button {
-    font-size: 28px;
-    width: 42px;
-    height: 42px;
+  font-size: 28px;
+  width: 42px;
+  height: 42px;
 }
 
 .rodape .icon-button:hover span {
-    width: 44px;
-    height: 44px;
-    margin: -51%;
+  width: 44px;
+  height: 44px;
+  margin: -51%;
 }
 
 .rodape .icon-button i {
-    width: 42px;
-    height: 42px;
-    line-height: 42px;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
 }
-
 
 /* Circle */
 
 .icon-button span {
-    border-radius: 0;
-    display: block;
-    height: 0;
-    left: 50%;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-    width: 0;
+  border-radius: 0;
+  display: block;
+  height: 0;
+  left: 50%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  width: 0;
 }
 
 .icon-button:hover span {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    margin: -53%;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin: -53%;
+}
+
+.bg-social-icon {
+  background-color: $mfm-amarelo;
 }
 
 .twitter span {
-    background-color: $mfm-amarelo;
+  background-color: $twitter-color;
 }
 
 .facebook span {
-    background-color: $mfm-amarelo;
+  background-color: $facebook-color;
 }
 
 .youtube span {
-    background-color: $mfm-amarelo;
+  background-color: $youtube-color;
 }
 
 .whatsapp span {
-    background-color: $mfm-amarelo;
+  background-color: $whatsapp-color;
 }
-
 
 /* Icons */
 
 .icon-button i {
-    background: none;
-    color: $white;
-    height: 30px;
-    left: 0;
-    line-height: 30px;
-    position: absolute;
-    top: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-    width: 32px;
-    z-index: 10;
+  background: none;
+  color: $white;
+  height: 30px;
+  left: 0;
+  line-height: 30px;
+  position: absolute;
+  top: 0;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  width: 32px;
+  z-index: 10;
 }
 
 .icon-button:hover i {
-    color: $mfm-magenta !important;
+  color: $mfm-magenta !important;
 }
 
-@media (max-width: 767.9px) {}
+@media (max-width: 767.9px) {
+}
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+}
