--- a/src/scss/_carrossel.scss
+++ b/src/scss/_carrossel.scss
@@ -1,48 +1,52 @@
 .carrossel {
-    width: 100%;
-    position: relative;
-    clear: both;
+  width: 100%;
+  position: relative;
+  clear: both;
 }
 
 .carrossel-items {
-    display: flex;
-    height: 100%;
-    justify-content: start;
-    align-content: center;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    padding: 0 20px;
-    scrollbar-width: none;
+  display: flex;
+  height: 100%;
+  justify-content: start;
+  align-content: center;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  padding: 0 20px;
+  scrollbar-width: none;
 }
 
 .carrossel .carrossel-items::-webkit-scrollbar {
-    height: 0;
-    background: $white;
+  height: 0;
+  background: $white;
 }
 
 .carrossel-botao {
-    top: 45%;
-    padding: 0px 3px;
-    border-radius: 50%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-size: 32px;
-    width: 32px;
-    height: 32px;
-    z-index: 2;
+  top: 45%;
+  padding: 0px 3px;
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 32px;
+  width: 32px;
+  height: 32px;
+  z-index: 2;
 }
 
 .carrossel-botao.esq {
-    left: 0;
-    margin-left: -20px;
-    background: $mfm-amarelo linear-gradient(90deg, $mfm-amarelo, $mfm-laranja) repeat-x !important;
+  left: 0;
+  margin-left: -20px;
+  background: $mfm-roxo linear-gradient(90deg, $mfm-roxo, $mfm-magenta) repeat-x !important;
 }
 
 .carrossel-botao.dir {
-    right: 0;
-    margin-right: -20px;
-    background: $mfm-amarelo linear-gradient(-90deg, $mfm-amarelo, $mfm-laranja) repeat-x !important;
+  right: 0;
+  margin-right: -20px;
+  background: $mfm-roxo linear-gradient(-90deg, $mfm-roxo, $mfm-magenta) repeat-x !important;
+}
+.carrossel-botao:hover {
+  cursor: pointer;
+  color: $white;
 }
