--- a/src/scss/_menu_topo.scss
+++ b/src/scss/_menu_topo.scss
@@ -1,152 +1,156 @@
 /* Menu */
 
 .section-menu-topo .content {
-    align-content: center;
+  align-content: center;
 }
 
 .section-menu-topo .menu-topo a {
-    color: $mfm-cinza;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
+  color: $mfm-cinza;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .section-menu-topo .menu-topo a:hover {
-    color: $mfm-roxo;
+  color: $mfm-roxo;
 }
 
 .section-menu-topo .menu-topo.active {
-    left: 0;
+  left: 0;
 }
 
 .section-menu-topo .menu-topo li {
-    text-transform: uppercase;
-    font-size: 12px;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 @media screen and (max-width: 767.9px) {
-    .section-menu-topo .logo {
-        background-color: $white;
-        text-align: center;
-        width: 100%;
-        padding: 10px 10px;
-    }
-    .section-menu-topo .logo img {
-        padding: 10px 0;
-        max-width: 150px;
-    }
-    .section-menu-topo .menu-topo .close,
-    .section-menu-topo .nav-toggle {
-        color: $mfm-roxo;
-        font-size: 22px;
-    }
-    .section-menu-topo .menu-topo {
-        display: block;
-        background: $mfm-roxo linear-gradient(90deg, $mfm-roxo, $mfm-magenta) repeat-x !important;
-        width: 250px;
-        height: 100%;
-        position: fixed;
-        padding: 0px;
-        left: -100%;
-        transition: left 0.5s ease-in-out;
-        top: 0;
-        z-index: 10;
-    }
-    .section-menu-topo .menu-topo .nav {
-        width: 100%;
-    }
-    .section-menu-topo .menu-topo .nav ul li {
-        padding: 15px;
-        font-size: 12px;
-    }
-    .section-menu-topo .menu-topo .nav ul li:not(:last-of-type) {
-        border-bottom: 1px solid $mfm-laranja;
-    }
-    .section-menu-topo .menu-topo .nav ul li a {
-        color: $mfm-amarelo;
-    }
-    .section-menu-topo .social {
-        display: none;
-    }
+  .section-menu-topo .logo {
+    background-color: $white;
+    text-align: center;
+    width: 100%;
+    padding: 10px 10px;
+  }
+  .section-menu-topo .logo img {
+    padding: 10px 0;
+    max-width: 150px;
+  }
+  .section-menu-topo .menu-topo .close,
+  .section-menu-topo .nav-toggle {
+    color: $mfm-roxo;
+    font-size: 22px;
+  }
+  .section-menu-topo .menu-topo {
+    display: block;
+    background: $mfm-roxo linear-gradient(90deg, $mfm-roxo, $mfm-magenta) repeat-x !important;
+    width: 250px;
+    height: 100%;
+    position: fixed;
+    padding: 0px;
+    left: -100%;
+    transition: left 0.5s ease-in-out;
+    top: 0;
+    z-index: 10;
+  }
+  .section-menu-topo .menu-topo .nav {
+    width: 100%;
+  }
+  .section-menu-topo .menu-topo .nav ul li {
+    padding: 15px;
+    font-size: 12px;
+  }
+  .section-menu-topo .menu-topo .nav ul li:not(:last-of-type) {
+    border-bottom: 1px solid $mfm-laranja;
+  }
+  .section-menu-topo .menu-topo .nav ul li a {
+    color: $mfm-amarelo;
+  }
+  .section-menu-topo .social {
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
-    .section-menu-topo {
-        padding: 10px 0;
-        width: 100%;
-        margin: 10px 0px;
-    }
-    .section-menu-topo .nav-toggle,
-    .section-menu-topo .menu-topo .close {
-        display: none;
-    }
-    .section-menu-topo .logo img {
-        min-width: 150px;
-    }
-    .menu-topo .nav {
-        display: grid;
-        grid-template-areas: "menu social";
-        grid-template-columns: 2fr minmax(75px, 150px);
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-    }
-    .menu-topo nav {
-        grid-area: menu;
-        margin: 0px 10px;
-    }
-    .section-menu-topo .menu-topo {
-        width: 100%;
-        display: flex;
-        align-content: center;
-    }
-    .section-menu-topo .social {
-        grid-area: social;
-        display: flex;
-        justify-content: flex-end;
-        flex-wrap: wrap;
-        color: $white;
-        font-size: 2.0em;
-    }
-    .section-menu-topo .social .icon-button {
-        //margin: 5px 0px 0px 5px;
-        margin-left: 5px;
-        margin-bottom: 5px;
-    }
-    .section-menu-topo ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-    .section-menu-topo .menu-topo li {
-        margin: 10px 0;
-    }
-    .section-menu-topo .menu-topo li .icon {
-        display: none;
-    }
-    .section-menu-topo .menu-topo li a {
-        padding: 5px 15px;
-        border-radius: 16px;
-    }
-    .section-menu-topo .menu-topo .nav ul li a {
-        color: $mfm-roxo;
-    }
-    .section-menu-topo .menu-topo li a:hover {
-        background: $mfm-amarelo;
-    }
-    .section-menu-topo .menu-topo nav .menu-active {
-        position: relative;
-    }
-    .section-menu-topo .menu-topo nav .menu-active::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 47%;
-        //margin-left: -50%;
-        border-width: 3px;
-        border-style: solid;
-        border-color: $mfm-roxo;
-        border-radius: 50%;
-    }
+  .section-menu-topo {
+    padding: 10px 0;
+    width: 100%;
+    margin: 0px 0px;
+    z-index: 9;
+    background-color: rgba($color: $white, $alpha: 0.8);
+    position: relative;
+    //margin-bottom: -100px;
+  }
+  .section-menu-topo .nav-toggle,
+  .section-menu-topo .menu-topo .close {
+    display: none;
+  }
+  .section-menu-topo .logo img {
+    min-width: 150px;
+  }
+  .menu-topo .nav {
+    display: grid;
+    grid-template-areas: "menu social";
+    grid-template-columns: 2fr minmax(75px, 150px);
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .menu-topo nav {
+    grid-area: menu;
+    margin: 0px 10px;
+  }
+  .section-menu-topo .menu-topo {
+    width: 100%;
+    display: flex;
+    align-content: center;
+  }
+  .section-menu-topo .social {
+    grid-area: social;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    color: $white;
+    font-size: 2em;
+  }
+  .section-menu-topo .social .icon-button {
+    //margin: 5px 0px 0px 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+  }
+  .section-menu-topo ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .section-menu-topo .menu-topo li {
+    margin: 10px 0;
+  }
+  .section-menu-topo .menu-topo li .icon {
+    display: none;
+  }
+  .section-menu-topo .menu-topo li a {
+    padding: 5px 15px;
+    border-radius: 16px;
+  }
+  .section-menu-topo .menu-topo .nav ul li a {
+    color: $mfm-roxo;
+  }
+  .section-menu-topo .menu-topo li a:hover {
+    background: $mfm-amarelo;
+  }
+  .section-menu-topo .menu-topo nav .menu-active {
+    position: relative;
+  }
+  .section-menu-topo .menu-topo nav .menu-active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 47%;
+    //margin-left: -50%;
+    border-width: 3px;
+    border-style: solid;
+    border-color: $mfm-roxo;
+    border-radius: 50%;
+  }
 }
